--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <!-- for github -->
+
         <!-- Add your site or application content here -->
         <div id="st-container" class="st-container" ng-class="{'st-menu-open': offCanvasOpen == true, 'st-effect-9': offCanvasOpen == true}">
                 <nav class="st-menu st-effect-9" id="menu-9">
