test for github in index

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- for github -->
+        <!-- for github - test for github -->
 
         <!-- Add your site or application content here -->
         <div id="st-container" class="st-container" ng-class="{'st-menu-open': offCanvasOpen == true, 'st-effect-9': offCanvasOpen == true}">
