--- a/public/pa/index.html
+++ b/public/pa/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="" ng-app="myApp">
+<html class="no-js" lang="" ng-app="paApp">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,23 +13,24 @@
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,900' rel='stylesheet' type='text/css'>
         <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'> -->
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="../css/normalize.css">
         <!-- <link rel="stylesheet" href="css/scrollable-table.css"> -->
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/flexiblegs.css">
-        <link rel="stylesheet" href="css/angular-busy.css">
-        <link rel="stylesheet" href="css/angular-dropdowns.css">
-        <link rel="stylesheet" href="css/ngDialog.css">
-        <link rel="stylesheet" href="css/ngDialog-theme-default.css">
-        <link rel="stylesheet" href="css/ngDialog-theme-webconsole.css">
-        <link rel="stylesheet" href="css/ngDialog-theme-login.css">
-        <link rel="stylesheet" href="css/ngDialog-theme-error.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/flexiblegs.css">
+        <link rel="stylesheet" href="../css/ui-grid.css">
+        <link rel="stylesheet" href="../css/angular-busy.css">
+        <link rel="stylesheet" href="../css/angular-dropdowns.css">
+        <link rel="stylesheet" href="../css/ngDialog.css">
+        <link rel="stylesheet" href="../css/ngDialog-theme-default.css">
+        <link rel="stylesheet" href="../css/ngDialog-theme-webconsole.css">
+        <link rel="stylesheet" href="../css/ngDialog-theme-login.css">
+        <link rel="stylesheet" href="../css/ngDialog-theme-error.css">
     <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>--> 
         <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
 mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel --> 
     </head>
-    <body ng-controller="initController">
+    <body ng-controller="painitController">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -51,21 +52,21 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
                 <div class="st-content">
                     <div class="wrapper">
                         <div class="header">
-                            <div class="hamburger" ng-click="openOffCanvas()"><img src="img/men25.svg"/></div>
-                            <div class="logo"><img class="logo-img" src="img/logo-white.png" /></div>
-                            <div class="app-name">Monitoring</div>
+                            <div class="hamburger" ng-click="openOffCanvas()"><img src="../img/men25.svg"/></div>
+                            <div class="logo"><img class="logo-img" src="../img/logo-white.png" /></div>
+                            <div class="app-name">Predictive Analytics</div>
                             <div class="utility-bar">
                                 <div class="profile">
-                                    <div class="profile__picture"><img class="default-pic" src="img/profile5.svg"></div>
+                                    <div class="profile__picture"><img class="default-pic" src="../img/profile5.svg"></div>
                                     <div><div class="profile__name">{{fullname}}</div><div class="profile__role">{{role}}</div></div>
                                 </div>
-                                <div class="logout" ng-click="logout()"><img src="img/logout.png"><br/>Logout</div>
+                                <div class="logout" ng-click="logout()"><img src="../img/logout.png"><br/>Logout</div>
                             </div>
                             <div class="clear"></div>
                         </div>
                         <div class="navigation">
-                            <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'dashboard'}"><a href="#dashboard">Dashboard</a></div>
-                            <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'webconsole'}"><a href="#webconsole">Web Console</a></div>
+                            <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'pamain'}"><a href="#/pa">PA</a></div>
+                            <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'healthindex'}"><a href="#/pa/healthindex">Health Index</a></div>
 <!--                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'about'}"><a href="#about">Tickets</a></div>
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'contact'}"><a href="#contact">Graphs</a></div>
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'nerc'}"><a href="#contact">NERC Events</a></div>
@@ -79,35 +80,10 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
                                 that works anywhere in the application. Each "action" on the global toolbar can be further modularized through a scope function
                                 or a controller.
                             -->
-                            <div class="sidebar">
-                                <ul class="side-list">
-                                    <li class="side-icon" ng-controller="searchPanelCtrl" ng-click="openSearch()"><img src="img/search74.svg" class="side-img" /></br/>Search</li>
-<!--                                     <li class="side-icon" ng-controller="alarmPanelCtrl" ng-click="openAlarm()"><img src="img/alarm31.svg" class="side-img" /></br/>Suppress Alarm</li>
-                                    <li class="side-icon"><img src="img/paper122.svg" class="side-img" /></br/>Send to Ticket</li> -->
-                                </ul>
-                            </div>
-                            <div id="searchPane" class="panel-container" ng-class="{'panel-open': searchOpen == true}">
-                                <div class="filter-box__form-element">
-                                    <input ng-model="searchTerm" ng-change="autosuggest('25');" ng-enter="search(searchTerm, 'onEnter');" class="filter-box__text-input search-box" type="text" placeholder="CABRCV1-CROCS-RTR-1" autofocus />
-                                </div><!--
-                                --><button class="btn-red" ng-click="search(searchTerm)">SEARCH</button>
-                                <div class="panel-results" cg-busy="{promise:aspromise}">
-                                    <table class="srp-table">
-                                        <tr class="srp-click" ng-click="search(value.vhid, 'Auto Suggest')" ng-repeat="(key, value) in results | orderBy: 'key' | limitTo: 25">
-                                            <td><span class="mini-pill" ng-class="{pillgreen: value.status == 'UP', pillred: value.status == 'DOWN'}">{{value.status}}</span></td>
-                                            <td>{{value.vhid}}</td>
-                                        </tr>
-                                        <tr ng-show="results.general_message == 'Error'">
-                                            <td colspan="2">No matches found.</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-<!--                             <div id="alarmPane" class="panel-container">
-                                <h2>Alarm Suppression</h2>
+<!--                             <div class="sidebar">
                             </div> -->
                             <div class="overlay" ng-class="{'overlay--on': searchOpen == true}"></div>
-                            <div class="cardui" ng-view cg-busy="{promise:promise}">
+                            <div class="cardui cardui--pa" ng-view cg-busy="{promise:promise}">
                             </div>
                         </div>
                         <!-- <div class="push"></div> -->
@@ -119,22 +95,23 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-        <script src="js/vendor/angular.js"></script>
-        <script src="js/vendor/angular-route.js"></script>
-        <script src="js/vendor/angular-resource.js"></script>
-        <script src="js/vendor/angular-animate.js"></script>
-        <script src="js/vendor/angular-busy.js"></script>
-        <script src="js/vendor/highcharts.js"></script>
-        <script src="js/vendor/moment.min.js"></script>
-        <script src="js/vendor/ngDialog.js"></script>
-        <script src="js/vendor/angular-scrollable-table.js"></script>
-        <!--<script src="http://code.highcharts.com/modules/data.js"></script>
-        <script src="http://code.highcharts.com/modules/no-data-to-display.js"></script>-->
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/controllers/login.js"></script>
-        <script src="js/sampleJSON.js"></script>
+        <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script src="../js/vendor/angular.js"></script>
+        <script src="../js/vendor/angular-route.js"></script>
+        <script src="../js/vendor/angular-resource.js"></script>
+        <script src="../js/vendor/angular-animate.js"></script>
+        <script src="../js/vendor/angular-busy.js"></script>
+        <script src="../js/vendor/highcharts.js"></script>
+        <script src="../js/vendor/moment.min.js"></script>
+        <script src="../js/vendor/ngDialog.js"></script>
+        <script src="../js/vendor/angular-scrollable-table.js"></script>
+        <script src="../js/vendor/ui-grid.js"></script>
+        <script src="http://code.highcharts.com/modules/data.js"></script>
+        <script src="http://code.highcharts.com/modules/no-data-to-display.js"></script>
+        <script src="../js/plugins.js"></script>
+        <script src="../js/pa.js"></script>
+        <!-- // <script src="../js/controllers/login.js"></script> -->
+        <script src="../js/sampleJSON.js"></script>
         <!-- templates -->
         <script type="text/ng-template" id="templateId">
             <h1>Template heading</h1>
